objects/related_record__c.object
<CustomObject>
    <fields>
        <fullName>Change_Control_Title__c</fullName>
        <formula>Change_Control__r.Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Control Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Control_Workflow_Status__c</fullName>
        <formula>Change_Control__r.CMPL123_WF_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Control Workflow Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Change_Control_Title__c</fullName>
        <formula>Related_Change_Control__r.Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Change Control Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Change_Control_Workflow_Status__c</fullName>
        <formula>Related_Change_Control__r.CMPL123_WF_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Change Control Workflow Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Control__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Control</label>
        <referenceTo>CMPL123QMS__Change_Control__c</referenceTo>
        <relationshipLabel>Related Records</relationshipLabel>
        <relationshipName>Related_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Change_Control__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Change Control</label>
        <referenceTo>CMPL123QMS__Change_Control__c</referenceTo>
        <relationshipLabel>Records Referencing This Change Control</relationshipLabel>
        <relationshipName>Related_Records1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Related Record</label>
    <nameField>
        <displayFormat>RR-{0000}</displayFormat>
        <label>Related Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>